@@ -43,4 +43,11 @@ public:
 	T y;
 };
 
+template<class T>
+Position<T>
+operator+ (Position<T> const & a, Position<T> const & b)
+{
+	return Position<T> (a.x + b.x, a.y + b.y);
+}
+
 #endif
